--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+# export_presets.cfg # No security keys are in use that would necessitate hiding this file.
 
 # Imported translations (automatically generated from CSV files)
 *.translation
