update notes with more info; add settings.json loading and error checking; add basic star comments; add loader class (empty)

--- a/starviewer/app/deployments/prod/settings.json
+++ b/starviewer/app/deployments/prod/settings.json
@@ -1,5 +1,5 @@
 {
-  "settings.role":  "prod",
+  "app.mode":       "prod",
   "stars.path":     null,
   "models.path":    null,
   "textures.path":  null
