--- a/starviewer/export_presets.cfg
+++ b/starviewer/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="StarViewerWebDev"
+name="StarViewerWeb"
 platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="*.json"
+include_filter=""
 exclude_filter=""
-export_path=".export/index.html"
+export_path=".export/2022-04-18/index.html"
 script_export_mode=1
 script_encryption_key=""
 
